@@ -3,6 +3,12 @@ Version 1.6.7
 *******************************************************************************
 
 2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	Fix compilation error in upnp/src/inc/ssdplib.h when compiling in OS X
+	(the netinet/* headers are not available).
+
+	Patch submitted by Chandra (inactiveneurons).
+
+2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	Fix compilation error in ixml/inc/ixml.h when compiling with an
 	Objective-C compiler (when cross-compiling for iPhone devices).
 
